# spotify-data-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  refactoring_plan.md  requirements.txt
.github/workflows/: ci.yml
dags/: bronze_ingestion_dag.py
simulator/: consumer.py  producer.py
spotify_dbt/: dbt_project.yml
spotify_dbt/models/: sources.yml
spotify_dbt/models/gold/: schema.yml  top_songs.sql  user_engagement.sql
spotify_dbt/models/silver/: clean_data.sql  schema.yml
src/: __init__.py  config.py
src/consumer/: __init__.py  main.py
src/producer/: __init__.py  event_generator.py  main.py
src/producer/fixtures/: songs.json
tests/: conftest.py  test_consumer.py  test_dag_integrity.py  test_event_generator.py
